add singularity subfolder

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
 [submodule "files/preproc_env/MRtrix3Tissue"]
-	path = files/preproc_env/MRtrix3Tissue
+	path = files/MRtrix3Tissue
 	url = https://github.com/3Tissue/MRtrix3Tissue
 [submodule "files/ICA-AROMA"]
 	path = files/ICA-AROMA
